feat: add admin selection in group create/edit forms
